[package]
name = "db-rpc-client-rs"
description = "Rust client for db-rpc"
license = "MIT"
homepage = "https://github.com/wilsonzlin/db-rpc"
readme = "README.md"
repository = "https://github.com/wilsonzlin/db-rpc.git"
version = "0.1.0"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2021"

[dependencies]
percent-encoding = "2.3.1"
reqwest = "0.12.3"
rmp-serde = "1.1.2"
rmpv = { version = "1.0.1", features = ["with-serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_bytes = "0.11.14"
serde_with = "3.7.0"
